# mcp-passport

./: .codecov.yml  .gitignore  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  GEMINI.md  GUIDE.md  README.md  SECURITY.md  docker-compose.yml  docs-header.html  keycloak-realm.json  settings.json
.cargo/: audit.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
benches/: proxy.rs
example/: settings.json
example/.gemini/: settings.json
mock-server/: Dockerfile  main.py  requirements.txt
src/: auth.rs  config.rs  crypto.rs  lib.rs  main.rs  proxy.rs  templates.rs  vault.rs
tests/: agent_integration_test.rs  cli_test.rs  headless_compliance_test.rs  integration_test.rs  jdoe_login_test.rs  mock_oidc_test.rs
